feat: Add secure password-protected resume download system
- Add 'Get Resume' button with password modal
- Implement serverless function for secure file streaming
- Add rate limiting and security features
- Include mobile-responsive design
- Add deployment documentation

--- a/index.html
+++ b/index.html
@@ -200,6 +200,166 @@
         }
       });
     });
+
+    // Resume modal functionality
+    document.addEventListener('DOMContentLoaded', function () {
+      const resumeModal = document.getElementById('resume-modal');
+      const resumeBtn = document.getElementById('get-resume-btn');
+      const resumeClose = document.querySelector('.resume-modal-close');
+      const resumeCancel = document.getElementById('resume-cancel');
+      const resumeForm = document.getElementById('resume-form');
+      const passwordInput = document.getElementById('resume-password');
+      const togglePassword = document.getElementById('toggle-password');
+      const errorMessage = document.getElementById('resume-error');
+      const submitBtn = document.getElementById('resume-submit');
+
+      // Open resume modal
+      resumeBtn.addEventListener('click', function () {
+        resumeModal.style.display = 'flex';
+        passwordInput.focus();
+        clearError();
+      });
+
+      // Close resume modal
+      function closeResumeModal() {
+        resumeModal.style.display = 'none';
+        resumeForm.reset();
+        clearError();
+      }
+
+      resumeClose.addEventListener('click', closeResumeModal);
+      resumeCancel.addEventListener('click', closeResumeModal);
+
+      // Close modal when clicking outside
+      window.addEventListener('click', function (e) {
+        if (e.target === resumeModal) {
+          closeResumeModal();
+        }
+      });
+
+      // Close modal with Escape key
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && resumeModal.style.display === 'flex') {
+          closeResumeModal();
+        }
+      });
+
+      // Toggle password visibility
+      togglePassword.addEventListener('click', function () {
+        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput.setAttribute('type', type);
+        const icon = togglePassword.querySelector('i');
+        icon.className = type === 'password' ? 'fa fa-eye' : 'fa fa-eye-slash';
+      });
+
+      // Clear error message
+      function clearError() {
+        errorMessage.style.display = 'none';
+        errorMessage.textContent = '';
+      }
+
+      // Show error message
+      function showError(message) {
+        errorMessage.textContent = message;
+        errorMessage.style.display = 'block';
+      }
+
+      // Set loading state
+      function setLoading(loading) {
+        submitBtn.disabled = loading;
+        const btnText = submitBtn.querySelector('.btn-text');
+        const btnLoading = submitBtn.querySelector('.btn-loading');
+
+        if (loading) {
+          btnText.style.display = 'none';
+          btnLoading.style.display = 'inline-flex';
+        } else {
+          btnText.style.display = 'inline-flex';
+          btnLoading.style.display = 'none';
+        }
+      }
+
+      // Handle form submission
+      resumeForm.addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const password = passwordInput.value.trim();
+        if (!password) {
+          showError('Please enter a password');
+          return;
+        }
+
+        setLoading(true);
+        clearError();
+
+        try {
+          const response = await fetch('/api/get-resume', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ password })
+          });
+
+          if (response.ok) {
+            // Get the filename from Content-Disposition header or use default
+            const contentDisposition = response.headers.get('Content-Disposition');
+            let filename = 'Audrey_Hsiao_Resume.pdf';
+
+            if (contentDisposition) {
+              const filenameMatch = contentDisposition.match(/filename="(.+)"/);
+              if (filenameMatch) {
+                filename = filenameMatch[1];
+              }
+            }
+
+            // Create blob and download
+            const blob = await response.blob();
+            const url = window.URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            window.URL.revokeObjectURL(url);
+            document.body.removeChild(a);
+
+            closeResumeModal();
+          } else {
+            const errorData = await response.json();
+            showError(errorData.message || 'Invalid password. Please try again.');
+          }
+        } catch (error) {
+          console.error('Error:', error);
+          showError('Network error. Please check your connection and try again.');
+        } finally {
+          setLoading(false);
+        }
+      });
+
+      // Focus trap for accessibility
+      resumeModal.addEventListener('keydown', function (e) {
+        if (e.key === 'Tab') {
+          const focusableElements = resumeModal.querySelectorAll(
+            'button, input, [tabindex]:not([tabindex="-1"])'
+          );
+          const firstElement = focusableElements[0];
+          const lastElement = focusableElements[focusableElements.length - 1];
+
+          if (e.shiftKey) {
+            if (document.activeElement === firstElement) {
+              lastElement.focus();
+              e.preventDefault();
+            }
+          } else {
+            if (document.activeElement === lastElement) {
+              firstElement.focus();
+              e.preventDefault();
+            }
+          }
+        }
+      });
+    });
   </script>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -333,6 +493,15 @@
                 </div>
 
               </div>
+
+              <!-- Get Resume Button -->
+              <div class="resume-download-section">
+                <button id="get-resume-btn" class="resume-download-btn">
+                  <i class="fa fa-download" aria-hidden="true"></i>
+                  Get Resume
+                </button>
+              </div>
+
               <!--p class="u-text u-text-grey-30 u-text-4">Besides my studying in school, I enjoy reading, watching movies and traveling as well.
                       And I messed around with my cameras a lot, you can browse photos I took in the "Gallery" page. There are also fil,I wrote in the "Blog" pages(It's mostly in Chinese)
                       I do believe that the photos I took and essays I wrote are important part of me. </p-->
@@ -708,6 +877,43 @@
             <span>Result Image 2</span>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Resume Password Modal -->
+  <div id="resume-modal" class="modal">
+    <div class="modal-content resume-modal-content">
+      <span class="modal-close resume-modal-close">&times;</span>
+      <div class="modal-header">
+        <h2 class="modal-title">Download Resume</h2>
+        <p class="modal-subtitle">Please enter the password to download my resume</p>
+      </div>
+      <div class="modal-body">
+        <form id="resume-form" class="resume-form">
+          <div class="form-group">
+            <label for="resume-password" class="form-label">Password</label>
+            <div class="password-input-wrapper">
+              <input type="password" id="resume-password" name="password" class="form-input"
+                placeholder="Enter password" required autocomplete="current-password">
+              <button type="button" id="toggle-password" class="password-toggle"
+                aria-label="Toggle password visibility">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </button>
+            </div>
+          </div>
+          <div id="resume-error" class="error-message" style="display: none;"></div>
+          <div class="form-actions">
+            <button type="button" id="resume-cancel" class="btn btn-secondary">Cancel</button>
+            <button type="submit" id="resume-submit" class="btn btn-primary">
+              <span class="btn-text">Download</span>
+              <span class="btn-loading" style="display: none;">
+                <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+                Downloading...
+              </span>
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
