feat: Hide photography page from navigation
- Comment out photography link in main navigation menu
- Keep photography.html file for future use
- Add clear comment indicating temporary hiding
- Maintain clean navigation structure

--- a/index.html
+++ b/index.html
@@ -404,8 +404,9 @@
                 href="#about" style="padding: 10px 20px;">About</a></li>
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
                 href="#projects">Projects</a></li>
-            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
-                href="photography.html" style="padding: 10px 20px;">Photography</a></li>
+            <!-- Photography link temporarily hidden -->
+            <!-- <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
+                href="photography.html" style="padding: 10px 20px;">Photography</a></li> -->
             <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
                 href="#contact" style="padding: 10px 20px;">Contact</a></li>
 
