Update index.html: project formatting and description

--- a/index.html
+++ b/index.html
@@ -759,10 +759,14 @@
     </div>
     <div class="u-text description">
       <p><strong>What I do:</strong></p>
-      <p><strong>LLM orchestration & RAG:</strong> LangChain pipelines, retrieval with vector DBs (Pinecone/Chroma), prompt engineering/evaluation, tool/function calling, routing, observability, and production deployment.</p>
-      <p><strong>Model fine-tuning:</strong> Transfer learning with LoRA/PEFT, dataset curation/cleaning, validation and ablation, metrics-driven evaluation, and safety/quality checks.</p>
-      <p><strong>Training from scratch (PyTorch):</strong> Custom architectures, losses and optimizers, data preprocessing/augmentation, experiment tracking, and performance tuning.</p>
-      <p><strong>Where I've applied it:</strong> Vision-language assistants, static code analysis/fixing, and anomaly detection with GNNs; plus time-series forecasting.</p>
+      <p><strong>LLM orchestration & RAG:</strong> LangChain pipelines, retrieval with vector DBs (Pinecone/Chroma),
+        prompt engineering/evaluation, tool/function calling, routing, observability, and production deployment.</p>
+      <p><strong>Model fine-tuning:</strong> Transfer learning with LoRA/PEFT, dataset curation/cleaning, validation and
+        ablation, metrics-driven evaluation, and safety/quality checks.</p>
+      <p><strong>Training from scratch (PyTorch):</strong> Custom architectures, losses and optimizers, data
+        preprocessing/augmentation, experiment tracking, and performance tuning.</p>
+      <p><strong>Where I've applied it:</strong> Vision-language assistants, static code analysis/fixing, and anomaly
+        detection with GNNs; plus time-series forecasting.</p>
     </div>
 
     <div class="projects-grid">
