feat: Implement Project Demo layout, favicon, and modal images
1) Project Demo Section:
- Convert to two-column layout (text left, video right)
- Update YouTube embed to 9aVkAC7eE-U with privacy-friendly URL
- Add placeholder caption paragraph below video
- Mobile responsive: stacks vertically with proper spacing
- No horizontal scroll, maintains responsive video wrapper

2) Favicon:
- Add logo.png as site icon (32x32)
- Include Apple touch icon support
- Links point to src/images/logo.png

3) Modal Image Placeholders:
- Add Images section to project modal with 3 placeholders
- 16:9 aspect ratio with rounded corners and dashed borders
- Responsive grid layout (auto-fit, min 200px)
- Maintains glassmorphism design and modal structure
- Placeholders ready for screenshot replacement

All features maintain existing styling, responsive design, and accessibility.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <!-- Favicon -->
+  <link rel="icon" href="src/images/logo.png" sizes="32x32" type="image/png">
+  <link rel="apple-touch-icon" href="src/images/logo.png">
+
   <script class="u-script" type="text/javascript" src="src/js/jquery.js"></script>
   <script class=" u-script" type="text/javascript" src="src/js/nicepage.js"></script>
   <!-- Load Type.js library from the CDN -->
@@ -971,17 +975,26 @@
 
   <!-- YouTube Video Section -->
   <div class="wrapper" id="video-demo">
-    <div class="animate__animated animate__fadeInDown section-title">
-      <h3 class="u-text u-text-1">Project Demo<br></h3>
-    </div>
-    <p class="u-text description">
-      Watch a demonstration of my application development project.
-    </p>
-    <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/AgI9g2c5nm8" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
+    <div class="video-demo-layout">
+      <div class="video-demo-left">
+        <div class="animate__animated animate__fadeInDown section-title">
+          <h3 class="u-text u-text-1">Project Demo<br></h3>
+        </div>
+        <p class="u-text description">
+          Watch a demonstration of my application development project.
+        </p>
+      </div>
+      <div class="video-demo-right">
+        <div class="video-container">
+          <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9aVkAC7eE-U" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+          </iframe>
+        </div>
+        <p class="video-caption description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+        </p>
+      </div>
     </div>
   </div>
 
@@ -1054,6 +1067,20 @@
         <div class="modal-section modal-highlights"></div>
         <div class="modal-section modal-tech"></div>
         <div class="modal-section modal-links"></div>
+        <div class="modal-section modal-images">
+          <h4>Images</h4>
+          <div class="modal-images-grid">
+            <div class="image-placeholder">
+              <span>Image Placeholder 1</span>
+            </div>
+            <div class="image-placeholder">
+              <span>Image Placeholder 2</span>
+            </div>
+            <div class="image-placeholder">
+              <span>Image Placeholder 3</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
