--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Favicon -->
-  <link rel="icon" href="logo.png" sizes="32x32" type="image/png">
-  <link rel="apple-touch-icon" href="logo.png">
+  <link rel="icon" href="./src/images/logo.jpg" sizes="56x56" type="image/jpg">
+  <link rel="apple-touch-icon" href="./src/images/logo.jpg">
 
   <script class="u-script" type="text/javascript" src="src/js/jquery.js"></script>
   <script class=" u-script" type="text/javascript" src="src/js/nicepage.js"></script>
@@ -373,7 +373,7 @@
     // Avatar animation - autoplay on load
     document.addEventListener('DOMContentLoaded', function () {
       const avatar = document.getElementById('avatar');
-      
+
       if (avatar) {
         // Ensure video plays automatically
         avatar.play().catch(err => {
@@ -565,8 +565,8 @@
   class="u-body u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-43be">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <a href="https://audreyhsiao.github.io" class="u-image u-image-1">
-        <img src="./logo.png" class=" logo-image">
+      <a href="https://audreyhsiao.github.io" class="u-image u-image-1" style=" height: 40px;">
+        <img src="./src/images/logo.png" class=" logo-image">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -579,17 +579,17 @@
           </a>
         </div>
         <div class="u-nav-container">
-          <ul class="u-nav u-unstyled u-nav-1">
-            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
+          <ul class="u-nav">
+            <li class="u-nav-item"><a class="menu-btn    "
                 href="index.html" style="padding: 10px 20px;">Home</a></li>
-            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
-                href="#about" style="padding: 10px 20px;">About</a></li>
-            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
-                href="#projects">Projects</a></li>
+            <li class="u-nav-item"><a class="menu-btn"
+                href="#aboutMe" style="padding: 10px 20px;">About</a></li>
+            <li class="u-nav-item"><a class="menu-btn"
+                href="#selected-projects">Projects</a></li>
             <!-- Photography link temporarily hidden -->
             <!-- <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link u-text-hover-palette-2-base"
                 href="photography.html" style="padding: 10px 20px;">Photography</a></li> -->
-            <li class="u-nav-item"><a class="menu-btn u-button-style u-nav-link  u-text-hover-palette-2-base"
+            <li class="u-nav-item"><a class="menu-btn u-button-style  "
                 href="#contact" style="padding: 10px 20px;">Contact</a></li>
 
           </ul>
@@ -615,7 +615,7 @@
   </section>
 
   <section id="aboutMe" class="u-black u-clearfix wrapper animate fadeInDown" style="display: flex;">
-    <div class="u-clearfix u-sheet u-sheet-1 wrapper">
+    <div class="u-clearfix u-sheet u-sheet-1 wrapper" >
       <div class="u-clearfix u-expanded-width">
         <div class="u-layout">
           <div class=" introduction ">
@@ -624,18 +624,18 @@
 		padding-right: 5%;
     flex:100%; 
     max-height: 100%;">
-              <h3 class="u-text u-text-1 animate animate__animated animate__fadeInDown">About me<br>
+              <h3 class="u-text u-text-1 animate animate__animated animate__fadeInDown" >About me<br>
               </h3>
               <div class="animate__animated animate__fadeIn" style="display: flex;
                  justify-content: center; 
                 align-items:center;
                 padding: 3%;">
                 <div class="avatar-container">
-                  <video id="avatar" class="avatar-video" autoplay loop muted playsinline width="300"
-                    height="300" aria-label="Animated avatar">
-                    <source src="avatar.MP4" type="video/mp4">
+                  <video id="avatar" class="avatar-video" autoplay loop muted playsinline width="300" height="300"
+                    aria-label="Animated avatar">
+                    <source src="./src/images/avatar.mp4" type="video/mp4">
                     <!-- Fallback image if video doesn't load -->
-                    <img src="src/images/logo.png" alt="Avatar" class="avatar-fallback">
+                    <img src="./src/images/avatar.png" alt="Avatar" class="avatar-fallback">
                   </video>
                 </div>
               </div>
@@ -905,9 +905,9 @@
                 max-width: 100%;
                 min-width: 100%;">
                   <div class="u-container-layout u-valign-middle-md u-container-layout-1">
-                    <h3 class="u-text u-text-1" id="projects">Selected Projects<br>
+                    <h3 class="u-text u-text-1" id="data-analysis-projects">Datathon and Kaggle Projects<br>
                     </h3>
-                    <h2 class="u-text section-title ">Data analysis and visualization</h2>
+                    <h2 class="u-text section-title ">Those projects are more about data analysis and visualization</h2>
 
                     <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
@@ -1047,7 +1047,7 @@
                 </div>
               </div>
             </div>
-            <div class="u-align-right u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
+            <div class="u-align-right u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2" id="contact">
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <h3 class="u-text u-text-1">happy to see you</h3>
 
