Update index.html formatting

--- a/index.html
+++ b/index.html
@@ -639,15 +639,15 @@
                   </video>
                 </div>
               </div>
-              <p class="u-text description u-text-3 about">I am currently a Master’s of Computer Science at Rice
+              <p class=" about">I am currently a Master’s of Computer Science at Rice
                 University with have
                 strong background in integrating technology with diverse fields.
 
-              <p class=" description about">Born and raised in Taiwan, I am fluent in both Mandarin and English,
+              <p class="  about">Born and raised in Taiwan, I am fluent in both Mandarin and English,
                 which enriches my ability to navigate and contribute to global tech discussions. I am excited about
                 leveraging my interdisciplinary background to drive innovation at the intersection of technology and
                 various domains.</p>
-              <p class=" description about">You can see some of my work in the following section and in the "selected
+              <p class=" about">You can see some of my work in the following section and in the "selected
                 projects" page as well.</p>
 
               </p>
@@ -834,13 +834,13 @@
       </h3>
       <!-- <h2>Data Mining and Visualization</h2> -->
     </div>
-    <p class="u-text description">
+    <p class="description">
       My academic journey began at Peking University’s YuanPei College, where I majored in Data Science. My love for
       integrating technology with diverse fields led me to explore
       groundbreaking projects, such as using graph neural networks(GCN and GAT) for anomaly detection in Bitcoin during
       my undergraduate thesis.</p>
 
-    <p class="u-text description"> Recognizing that emerging technologies like AI are deeply rooted in fundamental
+    <p class="description"> Recognizing that emerging technologies like AI are deeply rooted in fundamental
       computer science principles, I
       am
       currently pursuing a Master’s degree in Computer Science at Rice University. Here, I am diving into core areas
@@ -992,7 +992,7 @@
         <div class="animate__animated animate__fadeInDown section-title">
           <h3 class="u-text u-text-1">Project Demo<br></h3>
         </div>
-        <p class="u-text description">
+        <p class="description">
           Watch a demonstration of my application development project.
         </p>
       </div>
